first attempt at inserting expressions in the AST